kubernetes/apps/unbound-xi/bug-bounty/app/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bug-bounty
  labels:
    app.kubernetes.io/part-of: bug-bounty
spec:
  hostnames:
    - "bugs.${DOMAIN_9}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: domain-9-subdomain-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: bug-bounty-api
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: bug-bounty-api
          port: 8080
    - backendRefs:
        - name: bug-bounty-website
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bug-bounty-object-store-internal
  labels:
    app.kubernetes.io/part-of: bug-bounty
spec:
  hostnames:
    - "bug-assets-service.${DOMAIN_9}"
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: domain-9-subdomain-https
  rules:
    - backendRefs:
        - name: bug-bounty-object-store-proxy
          port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bug-bounty-assets
  labels:
    app.kubernetes.io/part-of: bug-bounty
spec:
  hostnames:
    - "bug-assets.${DOMAIN_9}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: domain-9-subdomain-https
  rules:
    - backendRefs:
        - name: bug-bounty-assets-proxy
          port: 8080
